--- a/.github/workflows/armstrong-validation.yaml
+++ b/.github/workflows/armstrong-validation.yaml
@@ -34,5 +34,8 @@ jobs:
         # Keep processing when errors are written. Nonzero exit will mark the 
         # step as failed. 
         
-        ./eng/scripts/Armstrong-Validation.ps1 -AuthToken secrets.GITHUB_TOKEN -Verbose
+        ./eng/scripts/Armstrong-Validation.ps1 -Verbose
       shell: pwsh
+      env:
+          GH_PR_NUMBER: ${{ github.event.number }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
