--- a/.github/workflows/armstrong-validation.yaml
+++ b/.github/workflows/armstrong-validation.yaml
@@ -1,6 +1,17 @@
 name: Armstrong Validation
 
-on: [pull_request, issue_comment]
+on:
+  pull_request:
+    types:
+      - opened
+      - edited
+      - reopened
+      - ready_for_review
+  issue_comment:
+    types:
+      - created
+      - edited
+      - deleted
 
 jobs:
   armstrong-validation:
