--- a/.github/workflows/armstrong-validation.yaml
+++ b/.github/workflows/armstrong-validation.yaml
@@ -1,12 +1,6 @@
 name: Armstrong Validation
 
-on:
-  pull_request:
-  issue_comment:
-    types:
-      - created
-      - edited
-      - deleted
+on: [issue_comment]
 
 jobs:
   armstrong-validation:
