--- a/.github/workflows/armstrong-validation.yaml
+++ b/.github/workflows/armstrong-validation.yaml
@@ -1,7 +1,9 @@
 name: Armstrong Validation
 
-on: [issue_comment]
-
+on: 
+  pull_request: 
+  issue_comment:
+  
 jobs:
   armstrong-validation:
     name: Armstrong Validation
