--- a/specification/mysql/resource-manager/Microsoft.DBforMySQL/FlexibleServers/preview/2024-10-01-preview/suppressions.yaml
+++ b/specification/mysql/resource-manager/Microsoft.DBforMySQL/FlexibleServers/preview/2024-10-01-preview/suppressions.yaml
@@ -1,3 +1,3 @@
 - tool: ArmstrongValidation
-  path: resource-manager/Microsoft.DBforMySQL/FlexibleServers/preview/2024-10-01-preview
+  path: resource-manager/Microsoft.DBforMySQL/FlexibleServers/preview/2024-10-01-preview/FlexibleServersTest.json
   reason: Test
